--- a/web-app/src/css/waiter/tableControls.css
+++ b/web-app/src/css/waiter/tableControls.css
@@ -10,6 +10,7 @@
 	--bg-btn-bills: rgba(255, 255, 255, 0.05);
 	--border-btn-bills: #000000;
 	--color-btn-bills: #000000;
+	--border-table: #19192c;
 
 	/* https://grid.layoutit.com/?id=o4EsZ1R */
 	display: grid;
@@ -53,9 +54,10 @@
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
 	grid-auto-rows: 1fr;
-	grid-gap: 1rem 0.5rem;
+	grid-gap: 0.8rem;
 	padding: 5%;
-	height: 100%;
+	max-height: 100%;
+	overflow-y: auto;
 }
 
 #tableControls .products button {
@@ -64,6 +66,7 @@
 	color: white;
 	border-radius: 40px;
 	font-weight: 600;
+	padding: 5% 0%;
 	text-transform: uppercase;
 }
 
@@ -95,6 +98,64 @@
 
 #tableControls .addedProducts {
 	grid-area: addedProducts;
+	padding: 0% 5% 2% 5%;
+}
+
+#tableControls .addedProducts table {
+	width: 100%;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	border: 2px solid var(--border-table);
+	border-collapse: collapse;
+	background-color: var(--border-table);
+}
+
+#tableControls .addedProducts table thead {
+	display: table;
+	table-layout: fixed;
+	width: calc(100% - var(--scroll-width));
+}
+
+#tableControls .addedProducts table tbody {
+	display: block;
+	height: 100%;
+	overflow-y: scroll;
+	background-color: var(--bg-dark);
+}
+
+#tableControls .addedProducts table tfoot {
+	display: table;
+	table-layout: fixed;
+	width: calc(100% - var(--scroll-width));
+	font-size: 1.2rem;
+	font-weight: 600;
+}
+
+#tableControls .addedProducts table tbody tr,
+#tableControls .addedProducts table tfoot {
+	border-top: 2px solid var(--border-table);
+	border-collapse: collapse;
+}
+
+#tableControls .addedProducts table tbody tr:last-of-type {
+	border-bottom: 2px solid var(--border-table);
+}
+
+#tableControls .addedProducts table tbody tr {
+	display: table;
+	table-layout: fixed;
+	width: 100%;
+}
+
+#tableControls .addedProducts table th,
+#tableControls .addedProducts table td {
+	font-weight: 600;
+}
+
+#tableControls .addedProducts table tbody tr td {
+	padding: 0.5rem 0px;
+	font-weight: 500;
 }
 
 #tableControls .controlsAndAddons {
@@ -104,8 +165,7 @@
 
 #tableControls .controls {
 	height: 50%;
-	padding: 0rem 1.5rem;
-	/* gap: 1rem; */
+	padding: 0rem 1rem;
 }
 
 #tableControls .controls button {
@@ -115,7 +175,7 @@
 	border-radius: 20px;
 	font-weight: 600;
 	font-size: 1.1rem;
-	padding: 0.5rem 0rem;
+	padding: 0.5rem;
 	text-transform: uppercase;
 }
 
@@ -125,6 +185,7 @@
 
 #tableControls .productsAndXButtons {
 	grid-area: products;
+	gap: 1rem;
 }
 
 #tableControls .bills {
