updates some stuff with ingredients

--- a/web-app/src/css/waiter/menu.css
+++ b/web-app/src/css/waiter/menu.css
@@ -10,7 +10,8 @@
 	font-weight: 600;
 }
 
-#waiterMenu button {
+#waiterMenu button,
+#topMenu button {
 	color: var(--color-sidemenu);
 	background-color: var(--bg-btn);
 	border: 1px solid transparent;
@@ -21,7 +22,8 @@
 	text-transform: uppercase;
 }
 
-#waiterMenu button.active {
+#waiterMenu button.active,
+#topMenu button.active {
 	background-color: var(--bg-btn-active);
 	border-color: var(--border-btn-active);
 }
@@ -34,4 +36,11 @@
 #topMenu {
 	height: 10.16%;
 	background-color: var(--bg-menu);
+	display: flex;
+	flex-direction: row-reverse;
+	padding: 0.5rem 0.5rem;
+}
+
+#topMenu button {
+	padding: 0.5rem;
 }
