--- a/web-app/src/css/waiter/tableControls.css
+++ b/web-app/src/css/waiter/tableControls.css
@@ -161,7 +161,8 @@
 	padding: 0rem 1rem;
 }
 
-#tableControls .controls button {
+#tableControls .controls button,
+#tableControls .addons button {
 	color: var(--color-sidemenu);
 	background-color: var(--bg-btn);
 	border: 1px solid transparent;
@@ -172,8 +173,20 @@
 	text-transform: uppercase;
 }
 
+#tableControls .addons button {
+	padding: 0.2rem 0.5rem;
+	font-size: 1rem;
+}
+
+#tableControls .addons button.active {
+	background-color: var(--dark-grey);
+	border-color: var(--color-btn-bill-active);
+	color: var(--color-btn-bill-active);
+}
+
 #tableControls .addons {
 	height: 50%;
+	padding: 0rem 1rem;
 }
 
 #tableControls .productsAndXButtons {
