--- a/web-app/src/css/global.css
+++ b/web-app/src/css/global.css
@@ -52,6 +52,62 @@ body {
 	color: white;
 }
 
+/* SCREENSAVER */
+#screensaver h1 {
+	/* center text vertically */
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	font-weight: 600;
+	font-size: 10rem;
+	/* text change colors loop */
+	animation: screensaver-text-change 15s ease infinite;
+	animation-direction: alternate;
+}
+
+#screensaver {
+	z-index: 999999;
+	display: none;
+	color: black;
+	text-align: center;
+	text-transform: uppercase;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: screensaver-gradient 15s ease infinite;
+}
+
+@keyframes screensaver-gradient {
+	0% {
+		background-position: 0% 50%;
+	}
+	50% {
+		background-position: 100% 50%;
+	}
+	100% {
+		background-position: 0% 50%;
+	}
+}
+
+@keyframes screensaver-text-change {
+	/* #ee7752, #e73c7e, #23a6d5, #23d5ab */
+	0% {
+		color: #23d5ab;
+	}
+	33.33% {
+		color: #23a6d5;
+	}
+	66.66% {
+		color: #e73c7e;
+	}
+	100% {
+		color: #ee7752;
+	}
+}
+
 /* CUSTOM SCROLL */
 /* Firefox */
 * {
