almost done with bartender css

--- a/web-app/src/css/global.css
+++ b/web-app/src/css/global.css
@@ -3,6 +3,7 @@
 :root {
 	--green: #00c892;
 	--orange: #9d5066;
+	--lime: #ccff00;
 	--orange-2: #e4582e;
 	--blue: #0067d2;
 	--dark-grey: #19192c;
