added live changes

--- a/web-app/src/css/waiter/payPartOfBill.css
+++ b/web-app/src/css/waiter/payPartOfBill.css
@@ -54,6 +54,10 @@
 	color: var(--orange);
 }
 
+#payPartOfBill #productsToPay .back {
+	color: var(--green);
+}
+
 #payPartOfBill .productsTables {
 	overflow: hidden;
 }
