--- a/web-app/src/css/waiter/tableControls.css
+++ b/web-app/src/css/waiter/tableControls.css
@@ -224,6 +224,7 @@
 	opacity: 0.3;
 }
 
-#reportModal table td:nth-of-type(2) {
+#reportModal table td:not(:first-of-type),
+#reportModal table th:not(:first-of-type) {
 	text-align: center;
 }
