--- a/web-app/src/css/waiter/menu.css
+++ b/web-app/src/css/waiter/menu.css
@@ -1,4 +1,16 @@
+#reportButton {
+	/* opacity: 0.05; */
+}
+
 #waiterDashboard {
+	width: 100%;
+	height: 100%;
+}
+
+#modal-tables {
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 1fr;
 	width: 100%;
 	height: 100%;
 }
