added searches and other stuff

--- a/web-app/src/css/global.css
+++ b/web-app/src/css/global.css
@@ -71,6 +71,10 @@ body {
 	animation-direction: alternate;
 }
 
+.d-table-footer-group {
+	display: table-footer-group;
+}
+
 #blackscreen {
 	z-index: 9999999;
 	border: none;
