--- a/web-app/src/css/waiter/payMoveScrap.css
+++ b/web-app/src/css/waiter/payMoveScrap.css
@@ -32,6 +32,11 @@
 	background-color: var(--bg-totals);
 }
 
+input#discount {
+	background-color: var(--bg-totals);
+	color: white;
+}
+
 #payPartOfBill .totalBlock .price {
 	font-size: 2rem;
 	font-weight: 600;
