--- a/web-app/src/css/waiter/tables/tables.css
+++ b/web-app/src/css/waiter/tables/tables.css
@@ -50,9 +50,9 @@
 	margin: 0px;
 	padding: 0px;
 	font-weight: 600;
-
 	border: none;
 	color: black;
+	border-radius: 5px;
 }
 
 .tablesGrid button > span {
