--- a/web-app/src/css/admin/admin.css
+++ b/web-app/src/css/admin/admin.css
@@ -1,17 +1,112 @@
 .qty-numpad {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	gap: 1rem;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1rem;
 }
 
 .qty-numpad button {
-	font-size: 2rem;
+  font-size: 2rem;
 }
 
 #informations div {
-	background-color: var(--bg-menu);
+  background-color: var(--bg-menu);
 }
 
 #informations div span {
-	color: rgba(255, 255, 255, 0.9);
+  color: rgba(255, 255, 255, 0.9);
+}
+
+.rado-add-table > div:nth-of-type(1) > div:nth-of-type(1),
+.rado-add-table > div:nth-of-type(2) > div:nth-of-type(1),
+.rado-add-table > div:nth-of-type(5) > div:nth-of-type(1),
+.rado-add-table > div:nth-of-type(3) > div:nth-of-type(1) {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 20px;
+  margin-top: 20px;
+}
+
+.rado-add-table > div:nth-of-type(1) > div:nth-of-type(1) > input[type="radio"],
+.rado-add-table > div:nth-of-type(2) > div:nth-of-type(1) > input[type="radio"],
+.rado-add-table > div:nth-of-type(5) > div:nth-of-type(1) > input[type="radio"],
+.rado-add-table
+  > div:nth-of-type(3)
+  > div:nth-of-type(1)
+  > input[type="radio"] {
+  -ms-transform: scale(2); /* IE 9 */
+  -webkit-transform: scale(2); /* Chrome, Safari, Opera */
+  transform: scale(2);
+}
+
+.table-rado {
+  top: 0px;
+  opacity: 50%;
+  pointer-events: none;
+  background-color: lightblue;
+  position: absolute;
+  cursor: pointer;
+  border: 0px;
+}
+
+.table-rado.table-circle-rado {
+  border-radius: 50% !important;
+}
+
+.table-rado.table-corner-small-rado::before {
+  content: "";
+  cursor: default;
+
+  width: 25px;
+  height: 25px;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: #0c0c1d;
+}
+
+.table-rado.table-corner-medium-rado::before {
+  content: "";
+  cursor: default;
+  width: 50px;
+  height: 50px;
+  display: block;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background-color: #0c0c1d;
+}
+
+.table-rado.table-corner-large-rado::before {
+  content: "";
+  cursor: default;
+
+  width: 101px;
+  height: 101px;
+  display: block;
+  position: absolute;
+  bottom: -1px;
+  left: -1px;
+  background-color: #0c0c1d;
+}
+
+#create-table-preview {
+  top: 50px;
+  left: 150px;
+  position: fixed;
+  height: 250px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+@media only screen and (max-width: 768px) {
+  .rado-add-table > div:nth-of-type(1) > div:nth-of-type(1),
+  .rado-add-table > div:nth-of-type(5) > div:nth-of-type(1),
+  .rado-add-table > div:nth-of-type(2) > div:nth-of-type(1),
+  .rado-add-table > div:nth-of-type(3) > div:nth-of-type(1) {
+    margin-top: 20px;
+    flex-direction: column;
+  }
 }
