Add renderRoom function

--- a/web-app/src/css/waiter/waiter.css
+++ b/web-app/src/css/waiter/waiter.css
@@ -4,57 +4,4 @@
 @import url(tables/inside.css);
 @import url(tableControls.css);
 @import url(payMoveScrap.css);
-
-.tables-container {
-  position: relative;
-  background-color: #9ed2ff;
-}
-
-.tables-container button.table-rado {
-  background-color: lightblue;
-  position: absolute;
-  cursor: pointer;
-  border: 0px;
-}
-
-.tables-container button.table-rado.table-circle-rado {
-  border-radius: 50% !important;
-}
-
-button.table-rado.table-corner-small-rado::before {
-  content: "";
-  cursor: default;
-
-  width: 25px;
-  height: 25px;
-  display: block;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  background-color: #9ed2ff;
-}
-
-button.table-rado.table-corner-medium-rado::before {
-  content: "";
-  cursor: default;
-  width: 50px;
-  height: 50px;
-  display: block;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  background-color: #9ed2ff;
-}
-
-button.table-rado.table-corner-large-rado::before {
-  content: "";
-  cursor: default;
-
-  width: 100px;
-  height: 100px;
-  display: block;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  background-color: #9ed2ff;
-}
+@import url(tables/dynamicTables.css);
