Fix moving order from one table to another

--- a/web-app/src/css/waiter/tables/dynamicTables.css
+++ b/web-app/src/css/waiter/tables/dynamicTables.css
@@ -6,6 +6,19 @@
   overflow: hidden;
 }
 
+#waiterDashboard .table-rado.taken,
+.modal .table-rado.taken {
+  color: white;
+  background-color: var(--table-taken);
+}
+
+#waiterDashboard .table-rado,
+.modal .table-rado {
+  background-color: var(--table-free);
+  opacity: 1;
+  text-align: center;
+}
+
 .tables-container {
   position: relative;
   background-color: #9ed2ff;
